--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "tailwindcss": "^2.0.2"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "jquery": "^3.5.1",
     "jquery-mask-plugin": "^1.14.16",
     "slick-carousel": "^1.8.1"
